--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -14,8 +14,10 @@
 @import "styles/general/common";
 @import "styles/general/general";
 @import "styles/general/buttons";
+@import "styles/general/form.elements";
 
 @import "styles/components/slider";
+@import "styles/components/comment";
 
 @import "styles/common/header";
 @import "styles/common/notifications";
