--- a/src/app/styles/event/_events.category.scss
+++ b/src/app/styles/event/_events.category.scss
@@ -27,7 +27,7 @@
     }
 
     .general-category__header__link {
-      color: #70879C;
+      color: $clr-medium-light;
       float: right;
 
       &:hover {
