--- a/src/app/styles/general/_variables.scss
+++ b/src/app/styles/general/_variables.scss
@@ -32,3 +32,19 @@ $column-width: 270px;
   }
 
 }
+
+// Images
+
+%thumb-default {
+
+  width: 60px;
+  height: 60px;
+
+
+  img {
+    @include border-radius(50%);
+    width: 100%;
+    height: 100%;
+  }
+
+}
