--- a/src/app/styles/event/_event.scss
+++ b/src/app/styles/event/_event.scss
@@ -33,7 +33,12 @@
       overflow: hidden;
 
       .heading {
+        margin-top: 20px;
         margin-bottom: 10px;
+      }
+
+      .list-thumbs {
+        margin-top: 40px;
       }
 
     }
@@ -75,3 +80,92 @@
       line-height: 16px;
       font-weight: bold;
     }
+
+.list-thumbs {
+  @extend .clearfix;
+
+  > li {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+
+    &:nth-of-type(3n) {
+      margin-right: 0;
+    }
+
+  }
+
+}
+
+.thumb-general {
+  @include transition(transform 250ms ease);
+
+  cursor: pointer;
+  width: 180px;
+  height: 180px;
+
+  &:active {
+    transform: scale(0.95);
+  }
+
+  img {
+    @include border-radius(5px);
+  }
+
+}
+
+.comments-section {
+  margin-top: 40px;
+
+  .comments-section__header {
+    margin-bottom: 20px;
+  }
+
+}
+
+.event-details {
+  margin-bottom: 40px;
+}
+
+  .event-details__author {
+    margin-bottom: 20px;
+
+    .thumb {
+      @extend %thumb-default;
+    }
+
+  }
+
+  .event-details__list {
+    color: $clr-light;
+    font-size: 13px;
+
+    > li {
+      margin-top: 5px;
+
+      &:first-of-type {
+        margin-top: 0;
+      }
+
+    }
+
+    .label {
+      display: inline-block;
+      min-width: 65px;
+      margin-right: 10px;
+      font-style: italic;
+    }
+
+    .value {
+      color: $clr-medium;
+      font-weight: bold;
+    }
+
+    .sub {
+      color: $clr-light;
+      font-weight: normal;
+      display: inline-block;
+      margin-left: 6px;
+    }
+
+  }
