rough user preview implementation

--- a/src/app/event/components/_event.body.html
+++ b/src/app/event/components/_event.body.html
@@ -4,11 +4,13 @@
       <section class="event-details">
         <div class="event-details__author">
           <div class="thumb">
-            <img ng-src="/assets/images/placeholder/me.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
+            <a href="">
+              <img ng-src="/assets/images/placeholder/me.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
+            </a>
           </div>
           <div class="info">
             <h5 class="subtitle">Event Author</h5>
-            <h4 class="title">Simon Hales</h4>
+            <a href="" class="title">Simon Hales</a>
           </div>
         </div>
         <ul class="event-details__list">
@@ -30,10 +32,50 @@
           </li>
         </ul>
       </section>
-      <header class="general-category__header">
-        <h3 class="general-category__header__title"><span>Followers</span></h3>
-        <a class="general-category__header__link" ng-click>SEE ALL</a>
-      </header>
+      <section class="event-followers">
+        <header class="general-category__header">
+          <h3 class="general-category__header__title"><span>Followers</span></h3>
+          <a class="general-category__header__link" ng-click>SEE ALL</a>
+        </header>
+        <ul class="event-followers__list">
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+          <li>
+            <user-thumb></user-thumb>
+          </li>
+        </ul>
+      </section>
     </aside>
     <section class="event-main">
       <section class="event-left">
