--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -18,6 +18,8 @@
 
 @import "styles/components/slider";
 @import "styles/components/comment";
+@import "styles/components/user.thumb";
+@import "styles/components/user.hover.popup";
 
 @import "styles/common/header";
 @import "styles/common/notifications";
