--- a/src/app/event/components/_event.body.html
+++ b/src/app/event/components/_event.body.html
@@ -3,14 +3,14 @@
     <aside class="event-aside">
       <section class="event-details">
         <div class="event-details__author">
-          <div class="thumb">
+          <div class="thumb" show-user-hover="">
             <a href="">
               <img ng-src="/assets/images/placeholder/me.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
             </a>
           </div>
           <div class="info">
             <h5 class="subtitle">Event Author</h5>
-            <a href="" class="title">Simon Hales</a>
+            <a href="" class="title" show-user-hover="">Simon Hales</a>
           </div>
         </div>
         <ul class="event-details__list">
