--- a/src/app/styles/general/_typography.scss
+++ b/src/app/styles/general/_typography.scss
@@ -52,6 +52,15 @@ a {
 
 }
 
+%link--medium {
+  font-size: 16px;
+  font-weight: bold;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 %link-hover {
   text-decoration: none;
 
