--- a/src/app/general/_comment.html
+++ b/src/app/general/_comment.html
@@ -1,12 +1,14 @@
 <div class="comment-structure">
   <div class="comment-structure__left">
-    <div class="comment-form__thumb comment-structure__thumb">
-      <img ng-src="/assets/images/placeholder/me.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
+    <div class="comment-form__thumb comment-structure__thumb" show-user-hover="">
+      <a href="">
+        <img ng-src="/assets/images/placeholder/me.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
+      </a>
     </div>
   </div>
   <div class="comment-form__side comment-structure__side comment__body">
     <h4 class="comment__body__title">
-      <a class="username" href="">Simon Hales</a>
+      <a class="username" href="" show-user-hover="">Simon Hales</a>
       <span>2 hours ago</span>
     </h4>
     <p class="comment__body__message">
