--- a/src/app/general/_user.thumb.html
+++ b/src/app/general/_user.thumb.html
@@ -1,4 +1,4 @@
-<div class="user-thumb">
+<div class="user-thumb" show-user-hover="">
   <a href="">
     <img ng-src="/assets/images/placeholder/me2.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
   </a>
