fixed some hover issues basic user page

--- a/src/app/general/_comment.html
+++ b/src/app/general/_comment.html
@@ -1,14 +1,14 @@
 <div class="comment-structure">
   <div class="comment-structure__left">
     <div class="comment-form__thumb comment-structure__thumb" show-user-hover="">
-      <a href="">
+      <a ui-sref="user({id: 'boop', slug: 'woop'})">
         <img ng-src="/assets/images/placeholder/me.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
       </a>
     </div>
   </div>
   <div class="comment-form__side comment-structure__side comment__body">
     <h4 class="comment__body__title">
-      <a class="username" href="" show-user-hover="">Simon Hales</a>
+      <a class="username" ui-sref="user({id: 'boop', slug: 'woop'})" show-user-hover="">Simon Hales</a>
       <span>2 hours ago</span>
     </h4>
     <p class="comment__body__message">
@@ -18,7 +18,7 @@
       Asperiores cupiditate excepturi inventore laborum nesciunt?
     </p>
     <div class="comment__body__options">
-      <a href="">REPLY</a>
+      <a ui-sref="user({id: 'boop', slug: 'woop'})">REPLY</a>
     </div>
   </div>
 </div>
