--- a/src/app/general/_user.hover.popup.html
+++ b/src/app/general/_user.hover.popup.html
@@ -4,11 +4,11 @@
      }"
      class="user-hover-popup" ng-show="visible">
   <div class="user-thumb user-thumb--big">
-    <a href="">
+    <a ui-sref="user({id: 'boop', slug: 'woop'})">
       <img ng-src="/assets/images/placeholder/me2.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
     </a>
   </div>
-  <a class="user-name" href="">Simon Hales</a>
+  <a class="user-name" ui-sref="user({id: 'boop', slug: 'woop'})">Simon Hales</a>
   <div class="options">
     <button class="btn btn--prominent btn--smaller">
       FOLLOW
