--- a/src/app/general/_user.thumb.html
+++ b/src/app/general/_user.thumb.html
@@ -1,5 +1,5 @@
 <div class="user-thumb" show-user-hover="">
-  <a href="">
+  <a ui-sref="user({id: 'boop', slug: 'woop'})">
     <img ng-src="/assets/images/placeholder/me2.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
   </a>
 </div>
