--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -13,6 +13,7 @@
 @import "styles/general/typography";
 @import "styles/general/common";
 @import "styles/general/general";
+@import "styles/general/layout";
 @import "styles/general/buttons";
 @import "styles/general/form.elements";
 
