--- a/src/app/styles/general/_layout.scss
+++ b/src/app/styles/general/_layout.scss
@@ -1,13 +1,28 @@
 .col-wrapper {
   @extend .clearfix;
+
+  &.flex {
+    display: flex;
+  }
+
 }
 
 .col-1 {
   float: left;
   width: $column-width;
   margin-right: 20px;
+
+  .col-wrapper.flex & {
+    float: none;
+  }
+
 }
 
 .col-remaining {
   overflow: hidden;
+
+  .col-wrapper.flex & {
+    overflow: visible;
+  }
+
 }
