categories and events

--- a/src/app/event/components/_event.body.html
+++ b/src/app/event/components/_event.body.html
@@ -83,7 +83,7 @@
           <div class="thumb-and-info__thumb">
             <img ng-src="/assets/images/placeholder/thumb-mars.jpg" src="/assets/images/blank.png" alt="Event thumbnail" />
           </div>
-          <div class="thumb-and-info__info">
+          <div class="thumb-and-info__info" show-date-hover="">
             <div class="thumb-and-info__title">in 3 months</div>
             <div class="thumb-and-info__subtitle">08/03/2015 2:00am</div>
           </div>
