--- a/src/app/general/_preview.slider.html
+++ b/src/app/general/_preview.slider.html
@@ -6,10 +6,10 @@
         <div class="underlay"></div>
         <div class="content">
           <div class="when-wrapper">
-            <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+            <a class="when" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">03:53:25</a>
           </div>
           <div class="title-wrapper">
-            <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+            <a class="title" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">Some Event</a>
           </div>
           <button class="btn btn--main">
             Follow
@@ -23,10 +23,10 @@
       <div class="underlay"></div>
       <div class="content">
         <div class="when-wrapper">
-          <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+          <a class="when" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">03:53:25</a>
         </div>
         <div class="title-wrapper">
-          <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+          <a class="title" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">Some Event</a>
         </div>
         <button class="btn btn--main">
           Follow
@@ -40,10 +40,10 @@
       <div class="underlay"></div>
       <div class="content">
         <div class="when-wrapper">
-          <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+          <a class="when" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">03:53:25</a>
         </div>
         <div class="title-wrapper">
-          <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+          <a class="title" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">Some Event</a>
         </div>
         <button class="btn btn--main">
           Follow
@@ -57,10 +57,10 @@
       <div class="underlay"></div>
       <div class="content">
         <div class="when-wrapper">
-          <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+          <a class="when" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">03:53:25</a>
         </div>
         <div class="title-wrapper">
-          <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+          <a class="title" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">Some Event</a>
         </div>
         <button class="btn btn--main">
           Follow
