--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -16,12 +16,14 @@
 @import "styles/general/layout";
 @import "styles/general/buttons";
 @import "styles/general/form.elements";
+@import "styles/general/lists";
 
 @import "styles/components/common";
 @import "styles/components/slider";
 @import "styles/components/comment";
 @import "styles/components/user.thumb";
 @import "styles/components/user.hover.popup";
+@import "styles/components/date.hover";
 
 @import "styles/common/header";
 @import "styles/common/notifications";
