--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,4 +1,5 @@
 <section class="page page--profile">
+
   <site-header></site-header>
   <section class="big-display">
     <div class="big-display__image" style="background-image:url(/assets/images/placeholder/event-mars.jpg);"></div>
@@ -142,8 +143,8 @@
     <div class="user-body col-remaining">
       <section class="events-category general-category col-3">
         <header class="general-category__header">
-          <h3 class="general-category__header__title"><span>Created <span>(6)</span></span></h3>
-          <a class="general-category__header__link" ng-click>SEE ALL</a>
+          <h3 class="general-category__header__title"><span>Created</span></h3>
+          <a class="general-category__header__link" ng-click>SEE ALL <span>(6)</span></a>
         </header>
         <ul class="general-category__list">
           <li>
@@ -159,8 +160,8 @@
       </section>
       <section class="events-category general-category col-3">
         <header class="general-category__header">
-          <h3 class="general-category__header__title"><span>Following <span>(12)</span></span></h3>
-          <a class="general-category__header__link" ng-click>SEE ALL</a>
+          <h3 class="general-category__header__title"><span>Following</span></h3>
+          <a class="general-category__header__link" ng-click>SEE ALL <span>(12)</span></a>
         </header>
         <ul class="general-category__list">
           <li>
