--- a/src/app/event/cards/_event.card.html
+++ b/src/app/event/cards/_event.card.html
@@ -1,15 +1,26 @@
 <div class="event-card">
   <div class="event-card__layer">
-    <div class="event-card__thumb" style="background-image:url(/assets/images/placeholder/event-3.jpg);">
-
+    <div class="event-card__top" show-date-hover="">
+      <div class="event-card__clock icon icon-clock"></div>
+      <div>
+        <div class="event-card__when">in 4 days</div>
+        <div class="event-card__date">Sun 27th, September</div>
+      </div>
+    </div>
+    <div class="event-card__thumb"> <!-- style="background-image:url(/assets/images/placeholder/event-3.jpg);" -->
+      <a ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">
+        <img ng-src="{{::event.profile_image_urls[0].thumbnail}}" src="/assets/images/blank.png" alt="Event thumbnail" />
+      </a>
     </div>
     <div class="event-card__bottom">
       <div class="event-card__info">
-        <h3 class="event-card__title">Event Title</h3>
-        <p class="event-card__desc">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-          autem enim esse expedita facilis fuga magnam obcaecati possimus.
-        </p>
+        <h3 class="event-card__title">
+          <a ng-bind="::event.title"
+             class="link-hover"
+             ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})"></a>
+        </h3>
+        <p ng-bind="::event.description"
+           class="event-card__desc"></p>
       </div>
     </div>
   </div>
@@ -20,7 +31,7 @@
     </button>
     <button class="btn btn--plain right-side">
       <span class="icon icon-comment"></span>
-      41
+      <span ng-bind="::event.num_comments"></span>
     </button>
   </div>
 </div>
